# test-python-project

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  claudio-helpful-command.sh  coverage.xml  pyproject.toml  tests.py  tox.ini
.github/workflows/: check.yml
.tox/py391/: .tox-info.json
