[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "My description"
authors = ["Claudio Cordova <claudio_cordova@yahoo.com>"]
license = "MIT"
#readme = "README.md"
#packages = [{include = "test_python_project"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
